💣🍅 Checkpoint ./index.js:766712/40 ./public/index.js:766712/1552 ./public/index.html:766712/55

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <button id="send" type="submit">send</button>
     <button id="call" type="submit">call</button>
     <textarea id="texts" rows="20" disabled></textarea>
+    <input id="status" disabled>
     <datalist id="targets"></datalist>
   </form>
 
