👨🍔 Checkpoint ./public/index.js:766712/394 ./public/index.html:766712/28 ./index.js:766712/10

--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
     <input id="source" placeholder="your name?">
     <input id="target" list="targets" placeholder="name of client?">
     <input id="text" class="p80" placeholder="your message?">
-    <button id="send" type="submit">send</button>
-    <button id="call" type="submit">call</button>
+    <button id="send">send</button>
+    <button id="call">call</button>
     <textarea id="texts" rows="20" disabled></textarea>
     <input id="status" disabled>
     <datalist id="targets"></datalist>
