🌂💩 Checkpoint ./index.js:766712/577 ./public/index.js:766712/1737 ./public/index.html:766712/52

--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,12 @@
 
 <main>
   <form style="width: 33%; float: left;">
-    <input id="source" placeholder="your name?">
+    <input id="name" placeholder="your name?">
     <input id="target" list="targets" placeholder="name of client?">
-    <input id="text" class="p80" placeholder="your message?">
+    <input id="message" class="p80" placeholder="your message?">
     <button id="send">send</button>
     <button id="call">call</button>
-    <textarea id="texts" rows="20" disabled></textarea>
+    <textarea id="messages" rows="20" disabled></textarea>
     <input id="status" disabled>
     <datalist id="targets"></datalist>
   </form>
