--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <input id="message" class="p80" placeholder="your message?">
     <button id="send">send</button>
     <button id="call">call</button>
+    <button id="hang">hang</button>
     <textarea id="messages" rows="20" disabled></textarea>
     <input id="status" disabled>
     <datalist id="targets"></datalist>
