🚆🎺 Checkpoint ./public/index.js:766712/55 ./index.js:766712/2 ./public/index.html:766712/56

--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,10 @@
     <datalist id="targets"></datalist>
   </form>
 
-  <video id="local" style="width: 33%; float: left;">
+  <video id="local" width="320" height="240" style="width: 33%; float: left;">
   </video>
 
-  <video id="remote" style="width: 33%; float: left;">
+  <video id="remote" width="320" height="240" style="width: 33%; float: left;">
   </video>
 </main>
 
